--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Project specific ignores
+## jinja generated spec files
+generated/**
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
